--- a/calculator.html
+++ b/calculator.html
@@ -13,6 +13,10 @@ function inverse() {
 	var num = document.getElementById("n1");
 	num.value = Math.pow(num.value, -1);
 }
+function fourth() {
+	var num = document.getElementById("n1");
+	num.value = Math.pow(num.value, 4);
+}
 </script>
 </head>
 <body>
@@ -22,5 +26,6 @@ Number:
 <button onclick="cube()"> x^3 </button>
 <button onclick="square()"> x^2 </button>
 <button onclick="inverse()"> 1/x </button>
+<button onclick="fourth()"> x^4 </button>
 </body>
 </html>
