--- a/calculator.html
+++ b/calculator.html
@@ -17,6 +17,10 @@ function fourth() {
 	var num = document.getElementById("n1");
 	num.value = Math.pow(num.value, 4);
 }
+function sin() {
+	var num = document.getElementById("n1");
+	num.value = Math.sin(num.value);
+}
 </script>
 </head>
 <body>
@@ -27,5 +31,6 @@ Number:
 <button onclick="square()"> x^2 </button>
 <button onclick="inverse()"> 1/x </button>
 <button onclick="fourth()"> x^4 </button>
+<button onclick="sin()"> sin(x) </button>
 </body>
 </html>
